# ths-arrow-demo

./: pyproject.toml
scripts/: ths_arrow_migrate.py
src/: demo_srg_12.py  simple_dataset _demo.py  simple_dataset_demo.py
