[tool.poetry]
name = "ths-arrow-play"
version = "0.1.0"
description = "a little example code using THS and pyarrow"
authors = ["Chris Chamberlain <chrisbc@artisan.co.nz>"]
license = "AGPL3"
readme = "README.md"

packages = [
    { include = "src" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyarrow = "^15.0.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
ipython = "^8.24.0"
nzshm-common = {git = "https://github.com/GNS-Science/nzshm-common-py.git", rev = "pre-release"}
nzshm-model = {git = "https://github.com/GNS-Science/nzshm-model.git", rev = "pre-release"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
tox = "^4.14.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
